# happy-cappy

./: .gitignore  Cargo.toml  README.md
assets/manifests/: happy_cappy.json
docs/superpowers/plans/: 2026-05-25-desktop-pet-v1.md  2026-05-25-happy-cappy-next-steps.md  2026-05-25-happy-cappy-smoke.md  2026-05-25-happy-cappy-upgrade.md  2026-05-25-workspace-awareness.md  2026-05-26-pet-manifest-refactor.md  2026-05-27-pet-catalog.md  2026-05-27-pet-picker.md  2026-05-29-sp4a-animation-lifecycle.md  2026-05-29-sp4b-notification-trigger.md  2026-05-30-sp4c-speech-bubble.md
docs/superpowers/reports/: 2026-05-25-happy-cappy-smoke-results.md
docs/superpowers/specs/: 2026-05-25-desktop-pet-design.md  2026-05-25-happy-cappy-upgrade-design.md  2026-05-25-workspace-awareness-design.md  2026-05-26-pet-manifest-refactor-design.md  2026-05-27-pet-catalog-design.md  2026-05-27-pet-picker-design.md  2026-05-29-sp4a-animation-lifecycle-design.md  2026-05-29-sp4b-notification-trigger-design.md  2026-05-30-sp4c-speech-bubble-design.md
packaging/: Info.plist
scripts/: build_app.sh  smoke_app.sh  verify.sh
src/: app.rs  bubble.rs  bubble_layout.rs  bubble_window_macos.rs  bundle.rs  command_target_macos.rs  control_socket.rs  interaction.rs  lib.rs  main.rs  menu_bar.rs  micro_action.rs  notification.rs  pet.rs  physics.rs  picker_entries.rs  picker_window_macos.rs  renderer.rs  settings.rs  settings_window_macos.rs  sprite.rs  window_macos.rs  workspace.rs
src/pet/: catalog.rs  manifest.rs  mod.rs  resolver.rs  runtime.rs
