[package]
name = "happy-cappy"
version = "0.1.0"
edition = "2021"
description = "Happy Cappy, a native macOS capybara desktop companion."
license = "UNLICENSED"

[dependencies]
env_logger = "0.11"
fastrand = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
pixels = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSButton",
  "NSButtonCell",
  "NSColor",
  "NSControl",
  "NSEvent",
  "NSFont",
  "NSImage",
  "NSImageView",
  "NSMenu",
  "NSMenuItem",
  "NSPanel",
  "NSResponder",
  "NSRunningApplication",
  "NSScreen",
  "NSScrollView",
  "NSSegmentedControl",
  "NSSlider",
  "NSStackView",
  "NSStatusBar",
  "NSStatusItem",
  "NSTableColumn",
  "NSTableRowView",
  "NSTableView",
  "NSTextField",
  "NSView",
  "NSWindow",
  "NSWindowController",
  "NSWorkspace",
  "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = ["NSDate", "NSTimer"] }
objc2-core-foundation = { version = "0.3", features = [
  "CFArray",
  "CFCGTypes",
  "CFData",
  "CFDictionary",
  "CFNumber",
  "CFString",
] }
objc2-core-graphics = { version = "0.3", features = [
  "CGColorSpace",
  "CGDataProvider",
  "CGEventSource",
  "CGEventTypes",
  "CGGeometry",
  "CGImage",
  "CGWindow",
] }
objc2-application-services = { version = "0.3", features = [
  "AXAttributeConstants",
  "AXError",
  "AXUIElement",
  "AXValue",
  "AXValueConstants",
  "HIServices",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
